tests/snapshots/snapshots__interpreter@open_nontail.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/open_nontail.pr
---
10
10
40
140
240
=> ()
