tests/snapshots/snapshots__interpreter@opt_chain.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/opt_chain.pr
---
7
-1
99
=> ()
