tests/snapshots/snapshots__interpreter@optic_prism_modify.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/optic_prism_modify.pr
---
50
-1
=> ()
