tests/snapshots/snapshots__interpreter@optics_each.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/optics_each.pr
---
[Player(a, Vec2(1, 2), 15, [Item(sword, 1)]), Player(b, Vec2(1, 2), 18, [Item(sword, 1)])]
[Player(a, Vec2(1, 2), 0, [Item(sword, 1)]), Player(b, Vec2(1, 2), 0, [Item(sword, 1)])]
[Player(a, Vec2(1, 2), 99, [Item(sword, 1)]), Player(b, Vec2(1, 2), 99, [Item(sword, 1)])]
World([Player(a, Vec2(0, 2), 5, [Item(sword, 1)]), Player(b, Vec2(0, 2), 8, [Item(sword, 1)])], 1)
World([Player(z, Vec2(1, 2), 15, [Item(sword, 1)]), Player(z, Vec2(1, 2), 18, [Item(sword, 1)])], 1)
World([Player(a, Vec2(1, 2), 5, [Item(sword, 6)]), Player(b, Vec2(1, 2), 8, [Item(sword, 6)])], 1)
World([Player(a, Vec2(1, 2), 1, [Item(sword, 1)]), Player(b, Vec2(1, 2), 1, [Item(sword, 1)])], 2)
Some(Item(gem, 6))
None
=> ()
