tests/snapshots/snapshots__interpreter@optics_index.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/optics_index.pr
---
[Vec2 { x = 99, y = 2 }, Vec2 { x = 3, y = 4 }]
[Vec2 { x = 1, y = 2 }, Vec2 { x = 3, y = 104 }]
[Vec2 { x = 7, y = 2 }, Vec2 { x = 8, y = 4 }]
World { party = [Vec2 { x = 0, y = 2 }, Vec2 { x = 3, y = 4 }], turn = 5 }
[Vec2 { x = 1, y = 2 }, Vec2 { x = 3, y = 4 }]
=> ()
