tests/snapshots/snapshots__interpreter@optics_modify.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/optics_modify.pr
---
Player { name = "hero", pos = Vec2 { x = 3, y = 4 }, hp = 30 }
Player { name = "hero", pos = Vec2 { x = 3, y = 4 }, hp = 40 }
Player { name = "hero", pos = Vec2 { x = 4, y = 4 }, hp = 20 }
Player { name = "healed", pos = Vec2 { x = 3, y = 4 }, hp = 30 }
=> ()
