tests/snapshots/snapshots__interpreter@optics_prism.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/optics_prism.pr
---
Circle { radius = 10 }
Square { side = 3 }
Circle { radius = 100 }
Square { side = 6 }
Square { side = 1 }
[Circle { radius = 2 }, Square { side = 2 }, Circle { radius = 6 }]
=> ()
